2015-01-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* data/{bg,si}/shape_info.txt, mapedit/{exult_studio.glade,shapeedit.cc},
	  objs/egg.*: Fixing bug #1896 "Campfires should hurt".
	* exult.cc: Useless .c_str() call.
	* content/sifixes/src/misc/inn_keys.uc: Fixed bug #1890 "SI FIXES: No
	  possibility to use the swith on room 4 in Sleeping Bull".
	* content/sifixes/src/misc/resurrect.uc, content/sifixes/src/npcs/gwenno.uc:
	  Fixed bug #1895 "SI Fixes: Disappearing Gwenno".

2015-01-06	Dominik Reichardt <dominus@users.sourceforge.net>
	* content/islefaq/*: fixed the island mod. Gave Colourless a ghost body, 
	  Nadir's schedule changed to patrol instead of pacing (we might have a 
	  bug there, he walked all over the map), fixed the position of the penguin 
	  statue, Amy's face will now properly show during the FAQ quest, and 
	  little usecode fixes.

2014-12-20	Dominik Reichardt <dominus@users.sourceforge.net>
	* shape_info.txt: Campfire (BG) and fire (SI) added to fire fields.
	* objs/egg.cc: Fields need to hurt any actor, not just the avatar/party.
	  Campfire (shape 825) frame 0 is burnt out and shouldn't cause damage. 
	  Testing with the original's item creator cheat revealed that the original 
	  seems to have confused frame 0 with frame 8.

2014-12-17	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: The teleport cheat screen now supports hexadecimal coords
	  and is now finished.
	
2014-12-16	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: The teleport cheat screen now supports geographic coords.

2014-12-13  jeff  <jeff@jeff-HP-Pavilion-dm4-Notebook-PC>

	* schedule.cc: Fix for bug 1891 - Desk schedule cleans up after itself now.

2014-12-11	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: Added display of geographic coordinates to the cheat screen.
	  Also begun work on the teleport cheat screen, teleport to dec coords and NPC
	  is working.
